# postdb

./: .gitignore  Makefile  README.md  docker-compose.yml  example_manifest.yaml  pyproject.toml
app/: __init__.py  config.py  deployer.py  main.py  manifest.py
apps/crm_platform/queries/: active_lead_scores.sql  churn_watch.sql  onboarding_queue.sql
apps/crm_platform/queries_update/: active_lead_scores_v2.sql  onboarding_queue_v2.sql  propensity_scores.sql
apps/finance_ops/: app.yaml
apps/finance_ops/queries/: monthly_arr.sql  overdue_invoices.sql  risk_accounts.sql
apps/support_hub/: app.yaml
apps/support_hub/queries/: csat_rollup.sql  high_priority_backlog.sql  sla_breach_risk.sql
examples/: application_query_parser_example.py  crm_platform_update.yaml
scripts/: deploy_all_apps.py
tests/: test_deploy_all_apps.py  test_deployer.py  test_main_auth.py  test_manifest.py
