[project]
name = "postdb"
version = "0.1.0"
description = "YAML-driven schema and content deployments for relational databases."
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [{ name = "postdb maintainers" }]
dependencies = [
  "fastapi==0.118.0",
  "psycopg[binary]>=3.1,<4.0",
  "PyYAML==6.0.3",
  "uvicorn==0.37.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
